# FrostFinder

./: .gitignore  AGENTS.md  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  PACK.sh  PKGBUILD  README.md  RELEASE.md  SECURITY.md  TRANSLATION.md  VERSION  com.frostfinder.desktop.json  index.html  package-lock.json  package.json  ql.html  rust-toolchain.toml  vite.config.js  vitest.config.js
.github/workflows/: ci.yml
BACKUP/: backup-20260317-045835.tar
flatpak/: generate-sources.sh
packaging/: com.frostfinder.desktop.metainfo.xml  frostfinder.desktop  generate-srcinfo.sh
packaging/homebrew/: frostfinder.rb
packaging/winget/: FrostFinder.FrostFinder.yaml
scripts/: check-locales.js  gen-shortcuts-readme.js
src/: camera.js  main.js  network.js  plugins.js  ql-window.js  search.worker.js  settings.js  style.css  undo.js  utils.js  views.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/entitlements/: macos.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  search.rs  tags.rs  trash.rs
src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  nl.json  pt.json  ru.json  zh.json
src/test/: a11y.test.js  main.test.js  setup.js  utils.test.js  views.test.js
src/types/: tauri-commands.d.ts
