[package]
name = "frostfinder"
version = "5.0.27"
description = "FrostFinder - A macOS Finder-inspired file manager"
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/frostfinder/frostfinder"
default-run = "frostfinder"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
rayon = "1.10"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "time"] }
notify = { version = "6" }
sha2 = "0.10"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "6", features = ["macos_fsevent"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
