[package]
name = "frostfinder"
version = "1.0.1-rc3"
description = "FrostFinder - A macOS Finder-inspired file manager"
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/frostfinder/frostfinder"
default-run = "frostfinder"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
rayon = "1.10"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "time", "aes-crypto"] }
notify = { version = "6" }
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2"
lofty = "0.22"
kamadak-exif = "0.6"
lopdf = "0.34"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "6", features = ["macos_fsevent"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
xattr = "1"

[target.'cfg(target_os = "windows")'.dependencies]
# winreg: read Windows registry for default apps and drive labels
winreg = "0.52"


[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
futures = { version = "0.3", features = ["executor"] }
# r33 P6.2: E2E test infrastructure
tauri-driver = "2"
